# viralfactory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  renovate.json  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yaml
interfaces/: __init__.py  gradio_ui.py
src/: __init__.py
src/chore/: GenerationContext.py  __init__.py
src/chore/prompts/: fix_captions.yaml
src/engines/: BaseEngine.py  NoneEngine.py  __init__.py  engines.json
src/engines/AIImageEngine/: A1111AIImageEngine.py  BaseAIImageEngine.py  DallEAIImageEngine.py  __init__.py
src/engines/AssetsEngine/: AssetsEngineSelector.py  BaseAssetsEngine.py  DallEAssetsEngine.py  GoogleAssetsEngine.py  __init__.py
src/engines/AssetsEngine/prompts/: assets.yaml
src/engines/AudioBackgroundEngine/: BaseAudioBackgroundEngine.py  MusicAudioBackgroundEngine.py  __init__.py
src/engines/BackgroundEngine/: BaseBackgroundEngine.py  SimpleBackgroundEngine.py  VideoBackgroundEngine.py  __init__.py
src/engines/CaptioningEngine/: BaseCaptioningEngine.py  SimpleCaptioningEngine.py  __init__.py
src/engines/LLMEngine/: AnthropicLLMEngine.py  BaseLLMEngine.py  OpenaiLLMEngine.py  __init__.py
src/engines/MetadataEngine/: BaseMetadataEngine.py  ShortsMetadataEngine.py  __init__.py
src/engines/MetadataEngine/prompts/: ShortsMetadata.yaml
src/engines/Pipelines/: BasePipeline.py  BestofShortPipeline.py  MemeExplainerPipeline.py  ScriptedShortPipeline.py  ScriptedVideoPipeline.py  __init__.py
src/engines/Pipelines/prompts/: MemeExplainer.yaml  bestof.yaml  description.yaml  long_form.yaml  scripts.yaml
src/engines/ScriptEngine/: BaseScriptEngine.py  CustomScriptEngine.py  ScientificFactsScriptEngine.py  ShowerThoughtsScriptEngine.py  __init__.py
src/engines/ScriptEngine/prompts/: scientific_facts.yaml  shower_thoughts.yaml
src/engines/SettingsEngine/: SettingsEngine.py  __init__.py
src/engines/StockImageEngine/: BaseStockImageEngine.py  GoogleStockImageEngine.py  __init__.py
src/engines/TTSEngine/: BaseTTSEngine.py  CoquiTTSEngine.py  ElevenLabsTTSEngine.py  __init__.py
src/engines/TTSEngine/prompts/: fix_captions.yaml
src/engines/TranscriptionEngine/: BaseTranscriptionEngine.py  WhisperTranscriptionEngine.py  __init__.py
src/engines/UploadEngine/: BaseUploadEngine.py  TikTokUploadEngine.py  YouTubeUploadEngine.py  __init__.py
src/engines/script/: AbstractScriptEngine.py  ComicalScriptEngine.py  DrammaticScriptEngine.py
src/models/: DatabaseManager.py  File.py  Setting.py  Video.py  __init__.py
src/utils/: __init__.py  prompting.py  youtube_uploading.py
ui/: __init__.py  gradio_ui.py  launcher.py
