[project]
name = "ViralFactory"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Paillat", email = "me@paillat.dev"},
]
dependencies = [
    "anthropic==0.25.3",
    "google-api-python-client==2.48.0",
    "google-auth-oauthlib==1.2.0",
    "gradio==4.26.0",
    "openai==1.13.3",
    "orjson==3.9.15",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "Requests==2.31.0",
    "SQLAlchemy==2.0.28",
    "torch==2.2.0",
    "typer<0.10.0", # not directly required but resolution takes ages without this
    "whisper-timestamped==1.14.4",
    "moviepy @ git+https://github.com/OsaAjani/moviepy.git",
    "tiktok-uploader @ git+https://github.com/Paillat-dev/tiktok-uploader.git",
    "TTS==0.22.0",
    "Google-Images-Search @ git+https://github.com/Paillat-dev/Google-Images-Search",
    "yt-dlp[default]>=2023.11.16",
]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm.resolution.overrides]
numpy = ">=1.25.0"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black"
]

[project.optional-dependencies]
win = [
    "windows-curses==2.3.2"
]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
exclude_packages = ["torch", "torchvision", "torchaudio"]

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
include_packages = ["torch", "torchvision", "torchaudio"]
exclude_packages = []

[tool.pdm.scripts]
start = "python main.py"
lint = "black ."
