[project]
name = "ViralFactory"
version = "0.0.0"
description = "A tool to create viral content"
authors = [
    {name = "Paillat", email = "me@paillat.dev"},
]
dependencies = [
    "anthropic==0.31.1",
    "google-api-python-client==2.48.0",
    "google-auth-oauthlib==1.2.1",
    "gradio==4.38.1",
    "openai==1.35.14",
    "orjson==3.10.6",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "SQLAlchemy==2.0.31",
    "whisper-timestamped==1.15.4",
    "moviepy @ git+https://github.com/OsaAjani/moviepy.git",
    "tiktok-uploader @ git+https://github.com/Paillat-dev/tiktok-uploader.git",
    "yt-dlp[default]==2023.11.16",
    "fix-busted-json==0.0.18",
    "Google-Images-Search==1.4.7",
    "requests==2.32.3",
    "windows-curses==2.3.3; platform_system  == 'Windows'",
    "coqui-tts==0.24.1",
]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm.resolution.overrides]
#numpy = "==1.25.0"
#typer = "<1.0,>=0.12.0"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black"
]


[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
exclude_packages = ["torch", "torchvision", "torchaudio"]

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
include_packages = ["torch", "torchvision", "torchaudio"]
exclude_packages = ["*"]

[tool.pdm.scripts]
start = "python main.py"
lint = "black ."
